# MemeCraft

./: README.md  eval_embeddings.py  get_dataset.sh  kek.py  main.py  meme_caption_generator.py  memes_dataset.ipynb  memes_dataset.py  pyproject.toml  result.pt  text_on_image.py
