[tool.poetry]
name = "meme-craft"
version = "0.1.0"
description = "Meme Generation"
authors = ["Collective mind"]
packages = [
    { include = "**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

numpy = "^1.23"
pillow = "^10.4.0"
torch = "^2.2.1"
torchvision = "^0.17.2"
transformers = "^4.47.0"
loguru = "^0.7.3"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core >= 1.4.2", "setuptools >= 40.9.0"]
build-backend = "poetry.core.masonry.api"
